# pellet-pilot

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  alarms.py  bandit.yaml  cook_notes.py  export.py  forecast.py  history.py  pellet.py  plan.py  plot.py  poll.py  presets.py  probe_names.py  pyproject.toml  report.py  requirements-plot.txt  requirements.txt  traeger_client.py  trend.py  wrap_coach.py
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: dependabot-auto-merge.yml  external-pr-review.yml  issue-autopilot.yml  security.yml
presets/: brisket.yaml  chicken.yaml  pork-butt.yaml  ribs.yaml
tests/: smoke.py
