[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pellet-pilot"
version = "0.1.0"
description = "Unofficial, read-only CLI for monitoring a Traeger WiFire grill"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "requests==2.34.2",
    "urllib3==2.7.0",
    "paho-mqtt==2.1.0",
    "numpy==2.5.1",
    "pyyaml==6.0.3",
]

[project.scripts]
pellet = "pellet:main"

[tool.setuptools]
py-modules = [
    "pellet",
    "poll",
    "plan",
    "probe_names",
    "presets",
    "forecast",
    "plot",
    "report",
    "history",
    "trend",
    "export",
    "alarms",
    "traeger_client",
]

[tool.setuptools.package-data]
"*" = ["presets/*.yaml"]
